[package]
name = "xkcd_lock"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["env", "derive", "cargo", "wrap_help"] }
ctrlc = { version = "3.4.4", features = ["termination"] }
dirs = "5.0.1"
env_logger = { version = "0.11.3", features = ["unstable-kv"] }
log = { version = "0.4.21", features = ["kv_std"] }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
textwrap = "0.16.1"
ureq = { version = "2.9.6", features = ["json"] }
url = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.13.0"
