[package]
name = "xkcd_lock"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["env", "derive", "cargo", "wrap_help"] }
clap-verbosity-flag = "3.0.4"
ctrlc = { version = "3.5.2", features = ["termination"] }
dirs = "6.0.0"
env_logger = { version = "0.11.10", features = ["unstable-kv"] }
log = { version = "0.4.29", features = ["kv_std"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
textwrap = "0.16.2"
ureq = { version = "3.3.0", features = ["json"] }
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.2.1"
tempfile = "3.27.0"
